# renderer

./: .gitmodules  CMakeLists.txt
include/chk/renderer/: renderer.h
include/chk/renderer/gl/: bindings.h
include/chk/renderer/null/: bindings.h
include/chk/renderer/soft/: bindings.h
src/: renderer.c
src/gl/: bindings.c
src/null/: bindings.c
src/soft/: bindings.c
